<resources>
    <string name="app_name">Protein Check</string>
    <string name="collect_min">10</string>
    <string name="collect_sec">00</string>
    <string name="double_dot">:</string>
    <string name="swim_min">03</string>
    <string name="swim_sec">00</string>
    <string name="bluetooth_main_actionbar_title">蓝牙连接</string>
    <string name="error_bluetooth_not_supported">本设备不支持蓝牙</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>
    <string name="string_back_to_main">返回主界面</string>
    <string name="ble_need_location">android6.0需要开启蓝牙</string>

<!-- other string-->
    <string name="device_name_default">Device Name</string>
    <string name="receive_byte">Recv Bytes：</string>
    <string name="data_format_default">Ascii</string>
    <string name="data_format_hex">Hex</string>
    <string name="clean">clean</string>
    <string name="send_byte">Send Bytes：</string>
    <string name="send">send</string>
    <string name="scan_ble_device">Scan BLE Device</string>
    <string name="device_name">name</string>
    <string name="device_address">address</string>
    <string name="scanning">Scanning......</string>
    <string name="zero">0</string>
    <string name="speed">0 B/s</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="bluetooth_not_connected">蓝牙未连接</string>
    <string name="bluetooth_is_connecting">蓝牙连接中</string>
    <string name="bluetooth_has_connected">蓝牙已连接</string>
    <string name="disconnect_bluetooth">断开连接</string>
    <!--broadcast send String -->
    <string name="broadcast_to_set">a0100#</string>

</resources>

