<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <item
            android:id="@+id/menu_bluetooth_not_connected"
            android:title="@string/bluetooth_not_connected"

            android:checkable="false"
            android:checked="false"
            android:orderInCategory="65"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_bluetooth_is_connecting"
            android:title="@string/bluetooth_is_connecting"
            android:checkable="false"
            android:checked="false"
            android:orderInCategory="66"
            app:showAsAction="always"/>

        <item
            android:id="@+id/menu_bluetooth_has_connected"
            android:title="@string/bluetooth_has_connected"
            android:checkable="false"
            android:checked="false"
            android:orderInCategory="67"
            app:showAsAction="always"/>


        <item
            android:id="@+id/menu_refresh"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:checked="false"
            android:orderInCategory="80"
            android:title=" "
            app:showAsAction="always" />


        <item
            android:id="@+id/menu_scan"

            android:title="@string/menu_scan"
            android:orderInCategory="90"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_stop"

            android:title="@string/menu_stop"
            android:orderInCategory="91"
            app:showAsAction="always" />
</menu>